# Customer_Churn_Prediction

./: .gitignore  EDA.ipynb  Modelling.ipynb  README.md
.ipynb_checkpoints/: churn_modelling-checkpoint.ipynb
Dash_App/: requirements.txt
Dash_App/src/: app.py
Gradio_App/: app.py  gradio_demo.ipynb  metrics.py  requirements.txt
Metrics_Dashboard/: requirements.txt
Metrics_Dashboard/src/data/: test_data.csv
Metrics_Dashboard/src/model/: model.pkl
gradio_dashboard/: app.py  metrics.py  requirements.txt
gradio_dashboard/model/: model.pkl
model_development/: eda.ipynb  modelling.ipynb  pyproject.toml
