[project]
name = "customer-churn-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1.1",
    "pandas>=2.2.2",
    "category-encoders>=2.6.3",
    "joblib>=1.4.2",
    "scikit-learn>=1.5.2",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
    "imbalanced-learn>=0.12.3",
    "tqdm>=4.66.5",
]
